tests/parser/valid/expressions/unary.src
fn main() -> int {
    int a = -5;
    int b = -(-10);
    int c = +5;
    return a + b + c;
}