tests/parser/invalid/syntax_errors/missing_function_name.src
fn () -> int {
    return 5;
}